# renovate_config_cfg

./: renovate.json  requirements.txt  setup.cfg
sub/: setup.cfg
sub_b/: setup.cfg
