[bdist-wheel]
universal=1

[metadata]
name = example
description = Example
author = Nico Tonnhofer
author_email = github@wurstnase.de
version = 0.0.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:

install_requires =
    boto3-stubs ==1.20.42
    "aws-cdk.aws-lambda-event-sources" >= 1.143.0
    aws-cdk.aws-apigateway >= 1.143.0
    aws-cdk.aws-dynamodb >= 1.143.0
    aws-cdk.aws-iam >= 1.143.0
    aws-cdk.aws-kms >= 1.143.0
    aws-cdk.aws-lambda >= 1.143.0
    aws-cdk.aws-sns >= 1.143.0
    aws-cdk.aws-sqs >= 1.143.0
    aws-cdk.core >= 1.143.0

python_requires = >=3.8

zip_safe = False
include_package_data = True

[options.package_data]
* = *.typed

[options.extras_require]

[options.packages.find]
where = src
